Review and verify Runnability + tweaks

--- a/project/notebooks/api_scrape_data.ipynb
+++ b/project/notebooks/api_scrape_data.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cfe3adc0",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,8 @@
     "import pandas as pd\n",
     "import datetime as dt\n",
     "import os\n",
-    "\n",
+    "import pathlib\n",
+    "RAW = pathlib.Path('../data/raw');\n",
     "def ts():\n",
     "    return dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
     "\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0dc15734",
    "metadata": {},
    "outputs": [
@@ -82,7 +83,7 @@
       "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.8), please consider upgrading to the latest version (0.3.13).\n",
       "Dataset shape: (284807, 31)\n",
       "Columns: ['Time', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6', 'V7', 'V8', 'V9', 'V10', 'V11', 'V12', 'V13', 'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20', 'V21', 'V22', 'V23', 'V24', 'V25', 'V26', 'V27', 'V28', 'Amount', 'Class']\n",
-      "Saved to: ../data/raw/fraud_kaggle_creditcard_20250827-200653.csv\n"
+      "Saved to: ../data/raw/fraud_kaggle_creditcard_20250828-205957.csv\n"
      ]
     }
    ],
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fdcdcc4c",
    "metadata": {},
    "outputs": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e6e84ee9",
    "metadata": {
     "lines_to_next_cell": 2
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9586f02e",
    "metadata": {},
    "outputs": [
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0e52fd26",
    "metadata": {},
    "outputs": [
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0beb3d50",
    "metadata": {},
    "outputs": [
