--- a/project/notebooks/python_fundamentals_summary.ipynb
+++ b/project/notebooks/python_fundamentals_summary.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "c9a2727b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "73387bf3",
    "metadata": {},
    "outputs": [
@@ -34,8 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.3 ms ± 609 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "793 μs ± 4.31 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "42.9 ms ± 690 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "611 μs ± 26.1 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "c4a945b2",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
    "source": [
     "#Dataframe analysis\n",
     "\n",
-    "df = pd.read_csv('../data/starter_data.csv')\n",
+    "df = pd.read_csv('../data/raw/starter_data.csv')\n",
     "df.info()\n",
     "df.head()\n",
     "if not os.path.exists('../data/processed'):\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "54ea6765",
    "metadata": {},
    "outputs": [
